Fix css bug table was overflowing from website viewport

--- a/static/inner_page.css
+++ b/static/inner_page.css
@@ -227,7 +227,7 @@ tbody{
         grid-row: 7;
         grid-column: 1;
         height: fit-content;
-        overflow: unset;
+        overflow-y: unset;
     }
     .search-text{
         height: 1rem;
